# 22s-pa03-girvan-newman-uwunary-tree

./: 256,128  512,256  64,32,16,8  CMakeLists.txt  README.md  model.py
README_data/: Time_Acc_Data.xlsx
README_data/C++/: Time_Acc_Data.xlsx
README_data/Python/: Time_Acc_Data.xlsx
data/: dataGenerator.py  dataset.graphml  dataset1.graphml  dataset10.graphml  dataset2.graphml  dataset3.graphml  dataset4.graphml  dataset5.graphml  dataset6.graphml  dataset7.graphml  dataset8.graphml  dataset9.graphml  gml_to_graphml.py  test.graphml
data/output/: output.graphml
models/: 128,256  128,256,512  128,64  128,64,32  128,64,32,16  256,128  512,128  512,256,128  64,32,16,8  model
networkTrainData/: 0.npy  1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  105.npy  106.npy  107.npy  108.npy  109.npy  11.npy  110.npy  111.npy  112.npy  113.npy  114.npy  115.npy  116.npy  117.npy  118.npy  119.npy  12.npy  120.npy  121.npy  122.npy  123.npy  124.npy  125.npy  126.npy  127.npy  128.npy  129.npy  13.npy  130.npy  131.npy  132.npy  133.npy  (+960 more)
src/: communityDetection.py  dataGenerator.py  gml_to_graphml.py  main.cpp  model.py  networkDataGeneration.py  networkParams.yml  trainNetwork.py
